WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134473
[iOS] languageSpecificFallbackFont() is not consistent
https://bugs.webkit.org/show_bug.cgi?id=134473
Summary
[iOS] languageSpecificFallbackFont() is not consistent
Myles C. Maxfield
Reported
2014-06-30 16:57:56 PDT
[iOS] languageSpecificFallbackFont() is not consistent
Attachments
Patch
(4.13 KB, patch)
2014-06-30 16:59 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(4.18 KB, patch)
2014-06-30 17:07 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(4.23 KB, patch)
2014-06-30 17:11 PDT
,
Myles C. Maxfield
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2014-06-30 16:59:36 PDT
Created
attachment 234121
[details]
Patch
WebKit Commit Bot
Comment 2
2014-06-30 17:02:37 PDT
Attachment 234121
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2014-06-30 17:06:20 PDT
Comment on
attachment 234121
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=234121&action=review
> Source/WebCore/platform/graphics/ios/FontCacheIOS.mm:155 > + if (c < 0x1401) > + return LanguageSpecificFont::None;
Looks to me like this changes behavior. The old code would return LanguageSpecificFont::Khmer for 0x1200-0x1400.
Myles C. Maxfield
Comment 4
2014-06-30 17:07:06 PDT
Created
attachment 234124
[details]
Patch
Myles C. Maxfield
Comment 5
2014-06-30 17:08:35 PDT
Comment on
attachment 234121
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=234121&action=review
>> Source/WebCore/platform/graphics/ios/FontCacheIOS.mm:155 >> + return LanguageSpecificFont::None; > > Looks to me like this changes behavior. The old code would return LanguageSpecificFont::Khmer for 0x1200-0x1400.
Yeah, you're right. Yet another reason why we need to be consistent!
Myles C. Maxfield
Comment 6
2014-06-30 17:11:34 PDT
Created
attachment 234125
[details]
Patch
Myles C. Maxfield
Comment 7
2014-06-30 17:27:06 PDT
http://trac.webkit.org/changeset/170618
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug